<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="representatives">Find My Representatives</string>
    <string name="ballot_logo">Ballot logo</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>

    <string name="location_required_error">Location services must be enabled to get current location</string>
    <string name="saved_election_toast">Election saved!</string>
    <string name="removed_election_toast">Election removed!</string>
    <string name="dialog_message">State is null for this election!</string>

</resources>
