<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/representativeFragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/motion_scene_representative">

        <TextView
            android:id="@+id/search_title"
            style="@style/headerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="addressLine1"
            android:hint="@string/address_line1"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="addressLine2"
            android:hint="@string/address_line2"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="city"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="state"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"/>

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="zip"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/button_search"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <TextView
            android:id="@+id/representative_title"
            style="@style/headerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title" />

        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <data>
        <variable
            name="representativeViewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

</layout>