<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/ballot_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ballot_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998"
            app:srcCompat="@drawable/ballot_logo" />

        <Button
            android:id="@+id/upcoming_elections_btn"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/representatives_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ballot_logo_img"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintVertical_chainStyle="packed"
            style="@style/buttonStyle" />

        <Button
            android:id="@+id/representatives_btn"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/representatives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_elections_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>