<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/search_title"
            style="@style/headerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="1"/>

        <Constraint
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="addressLine1"
            android:hint="@string/address_line1"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title"
            android:alpha="1"/>

        <Constraint
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="addressLine2"
            android:hint="@string/address_line2"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1"
            android:alpha="1"/>

        <Constraint
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="city"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2"
            android:alpha="1"/>

        <Constraint
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="state"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            android:alpha="1"/>

        <Constraint
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="zip"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"
            android:alpha="1"/>

        <Constraint
            android:id="@+id/button_search"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/representatives"
            app:layout_constraintTop_toBottomOf="@id/zip"
            android:alpha="1"/>

        <Constraint
            android:id="@+id/button_location"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search"
            android:alpha="1"/>

        <Constraint
            android:id="@+id/representatives_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            android:alpha="1"/>

    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/search_title"
            style="@style/headerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0"/>

        <Constraint
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="addressLine1"
            android:hint="@string/address_line1"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0"/>

        <Constraint
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="addressLine2"
            android:hint="@string/address_line2"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0"/>

        <Constraint
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="city"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0"/>

        <Constraint
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="state"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            android:alpha="0"/>

        <Constraint
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="zip"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0"/>

        <Constraint
            android:id="@+id/button_search"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/representatives"
            app:layout_constraintBottom_toTopOf="parent"
            android:alpha="0"/>

        <Constraint
            android:id="@+id/button_location"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintBottom_toTopOf="parent"
            android:alpha="0"/>

        <Constraint
            android:id="@+id/representatives_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title" />

    </ConstraintSet>

    <Transition
        app:constraintSetEnd="@+id/end"
        app:constraintSetStart="@+id/start"
        app:motionInterpolator="easeInOut">
        <OnSwipe
            app:dragDirection="dragUp"
            app:touchAnchorId="@id/representatives_recyclerView" />
    </Transition>
    <!--<Transition
        app:constraintSetEnd="@+id/end"
        app:constraintSetStart="@+id/start">
        <OnSwipe
            motion:dragDirection="dragUp"
            motion:onTouchUp="stop"
            motion:touchAnchorId="@+id/representatives_recyclerView" />
    </Transition>-->
</MotionScene>