<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title=""
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            style="@style/textStyle1" />

        <TextView
            android:id="@+id/state_header"
            style="@style/headerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/textStyle2"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:clickable="true"
            android:text="@string/voting_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot"
            style="@style/textStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:clickable="true"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <Button
            android:id="@+id/follow_button"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>